--- a/src/blocks/block-toggles/styles/style.scss
+++ b/src/blocks/block-toggles/styles/style.scss
@@ -61,7 +61,9 @@
 }
 
 .c9-toggles-item-content {
-	padding: 25px 30px;
+	> div {
+		padding: 25px 30px;
+	}
 }
 
 .c9-toggles .c9-toggles-toggle {
